# TaskFlow

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
client/: CMakeLists.txt  console_app.cpp  console_app.hpp  main.cpp
core/: CMakeLists.txt  ITaskService.hpp  console_app.cpp  console_app.hpp  main.cpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp
server/: CMakeLists.txt  TaskController.cpp  TaskController.hpp  TaskRepository.cpp  TaskRepository.hpp  main.cpp
server/utils/: ParserTime.cpp  ParserTime.hpp
tests/: CMakeLists.txt  test_tasks.cpp
